tests/compile/userdata_const_getter.stderr
error: const items do not support `getter` or `setter`
 --> tests/compile/userdata_const_getter.rs:7:11
  |
7 |     const X: u32 = 42;
  |           ^
